--- a/Videos/index.html
+++ b/Videos/index.html
@@ -160,10 +160,10 @@
 
     <main id="main">
         <section class="ad-container-desktop">
-            <div class="ad-wrapper-desktop">
+            <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- Videos Page Ad Unit -->
-                <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <!-- ad-slot-desktop -->
+                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
@@ -171,10 +171,10 @@
 
             <div class="extra"></div>
 
-            <div class="ad-wrapper-desktop">
+            <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- Videos Page Ad Unit -->
-                <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <!-- ad-slot-desktop -->
+                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
@@ -182,15 +182,16 @@
 
             <div class="extra"></div>
 
-            <div class="ad-wrapper-desktop">
+            <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- Videos Page Ad Unit -->
-                <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <!-- ad-slot-desktop -->
+                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
             </div>
         </section>
+
         <section>
             <div>
                 <h2 class="page-title">VIDEOS</h2>
@@ -234,8 +235,8 @@
 
                 <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                    <!-- Videos Page Ad Unit -->
-                    <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <!-- ad-slot-mobile -->
+                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -279,8 +280,8 @@
 
                 <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                    <!-- Videos Page Ad Unit -->
-                    <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <!-- ad-slot-mobile -->
+                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -326,8 +327,8 @@
 
                 <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                    <!-- Videos Page Ad Unit -->
-                    <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <!-- ad-slot-mobile -->
+                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -371,8 +372,8 @@
 
                 <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                    <!-- Videos Page Ad Unit -->
-                    <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <!-- ad-slot-mobile -->
+                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -418,8 +419,8 @@
 
                 <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                    <!-- Videos Page Ad Unit -->
-                    <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <!-- ad-slot-mobile -->
+                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -463,8 +464,8 @@
 
                 <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                    <!-- Videos Page Ad Unit -->
-                    <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <!-- ad-slot-mobile -->
+                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -516,11 +517,12 @@
                 </div>
             </div>
         </section>
+
         <section class="ad-container-desktop">
-            <div class="ad-wrapper-desktop">
+            <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- Videos Page Ad Unit -->
-                <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <!-- ad-slot-desktop -->
+                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
@@ -528,10 +530,10 @@
 
             <div class="extra"></div>
 
-            <div class="ad-wrapper-desktop">
+            <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- Videos Page Ad Unit -->
-                <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <!-- ad-slot-desktop -->
+                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
@@ -539,10 +541,10 @@
 
             <div class="extra"></div>
 
-            <div class="ad-wrapper-desktop">
+            <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- Videos Page Ad Unit -->
-                <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <!-- ad-slot-desktop -->
+                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
