--- a/Videos/index.html
+++ b/Videos/index.html
@@ -162,29 +162,29 @@
         <section class="ad-container-desktop">
             <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- ad-slot-desktop -->
-                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <!-- Videos Page 1st left side -->
+                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="2302747017" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
             </div>
 
-            <div class="extra"></div>
+            <div class="filler"></div>
 
             <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- ad-slot-desktop -->
-                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <!-- Videos Page 2nd left side -->
+                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="1289596980" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
             </div>
 
-            <div class="extra"></div>
+            <div class="filler"></div>
 
             <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- ad-slot-desktop -->
+                <!-- Videos Page 3rd left side -->
                 <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
@@ -235,7 +235,7 @@
 
                 <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                    <!-- ad-slot-mobile -->
+                    <!-- Video Page 1st Mobile Ad Unit -->
                     <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
@@ -280,8 +280,8 @@
 
                 <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                    <!-- ad-slot-mobile -->
-                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <!-- Videos Page 2nd Mobile Ad Unit -->
+                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="5546151160" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -327,8 +327,8 @@
 
                 <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                    <!-- ad-slot-mobile -->
-                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <!-- Videos Page 3rd Mobile Ad Unit -->
+                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="1335443416" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -372,8 +372,8 @@
 
                 <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                    <!-- ad-slot-mobile -->
-                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <!-- Videos Page 4th Mobile Ad Unit -->
+                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="4041497800" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -419,8 +419,8 @@
 
                 <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                    <!-- ad-slot-mobile -->
-                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <!-- Videos Page 5th Mobile Ad Unit -->
+                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9102252799" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -464,8 +464,8 @@
 
                 <div class="ad-container-mobile">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                    <!-- ad-slot-mobile -->
-                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <!-- Videos Page 6th Mobile Ad Unit -->
+                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="3770035063" data-ad-format="auto" data-full-width-responsive="true"></ins>
                     <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
@@ -507,6 +507,15 @@
                     </a>
                 </div>
 
+                <div class="ad-container-mobile">
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+                    <!-- Videos Page 7th Mobile Ad Unit -->
+                    <ins class="adsbygoogle ad-slot-mobile" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="5821483334" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 1).png" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -521,30 +530,30 @@
         <section class="ad-container-desktop">
             <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- ad-slot-desktop -->
-                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <!-- Videos Page 1st right side -->
+                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8293440291" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
             </div>
 
-            <div class="extra"></div>
+            <div class="filler"></div>
 
             <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- ad-slot-desktop -->
-                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <!-- Videos Page 2nd right side -->
+                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9007756166" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
             </div>
 
-            <div class="extra"></div>
+            <div class="filler"></div>
 
             <div>
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- ad-slot-desktop -->
-                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <!-- Videos Page 3rd right side -->
+                <ins class="adsbygoogle ad-slot-desktop" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="2442347818" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
