--- a/Videos/Clix_Team_Selector_Chapter_3/index.html
+++ b/Videos/Clix_Team_Selector_Chapter_3/index.html
@@ -12,7 +12,7 @@
     <script src="/js/main.js"></script>
     <script src="/js/clix_team_selector_chapter_3.js"></script>
 
-    <title>VukeFN | Videos</title>
+    <title>VukeFN | Clix Team Selector Chapter 3</title>
 </head>
 
 <body id="body">
