--- a/Videos/Headshot_Only_Gamemode/index.html
+++ b/Videos/Headshot_Only_Gamemode/index.html
@@ -12,7 +12,7 @@
     <script src="/js/main.js"></script>
     <script src="/js/headshot_only_gamemode.js"></script>
 
-    <title>VukeFN | Videos</title>
+    <title>VukeFN | Headshot Only Gamemode</title>
 </head>
 
 <body id="body">
@@ -176,16 +176,6 @@
                 </li>
             </ul>
 
-            <!-- ========== AD ========== -->
-            <section>
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- Video Horizontal Ad Unit -->
-                <ins class="adsbygoogle ad-slot2" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
-                <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
-            </section>
-
             <!-- ========== SETTINGS BUTTONS ========== -->
             <div class="settings-buttons">
                 <div class="gear-btn" id="gear-btn" onclick="openGearPopup()">
@@ -212,8 +202,8 @@
         <!-- ========== AD ========== -->
         <section>
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-            <!-- Video Horizontal Ad Unit -->
-            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <!-- Video Page In-Between Ad Unit -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="1690666631" data-ad-format="auto" data-full-width-responsive="true"></ins>
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
