Video Page update
- Added title div to video page

--- a/Videos/Clix_Team_Selector_Chapter_3/index.html
+++ b/Videos/Clix_Team_Selector_Chapter_3/index.html
@@ -145,6 +145,15 @@
     <!-- ============================== MAIN ============================== -->
     <main id="main">
 
+        <!-- ============================== TITLE ============================== -->
+        <div class="page-header">
+            <h2 class="page-title">VIDEOS</h2>
+            <a class="watch-on-yt" href="https://www.youtube.com/watch?v=YgiAJ-3v0_Y" target="blank_">
+                <h3>Watch on YouTube</h3>
+                <ion-icon name="open-outline"></ion-icon>
+            </a>
+        </div>
+
         <!-- ============================== DEVICES ============================== -->
         <section>
             <section class="devices-sec1" id="settings1">
