--- a/Videos/Headshot_Only_Gamemode/index.html
+++ b/Videos/Headshot_Only_Gamemode/index.html
@@ -145,6 +145,15 @@
     <!-- ============================== MAIN ============================== -->
     <main id="main">
 
+        <!-- ============================== TITLE ============================== -->
+        <div class="page-header">
+            <h2 class="page-title">VIDEOS</h2>
+            <a class="watch-on-yt" href="https://www.youtube.com/watch?v=vIFzcxy0jZ8" target="blank_">
+                <h3>Watch on YouTube</h3>
+                <ion-icon name="open-outline"></ion-icon>
+            </a>
+        </div>
+
         <!-- ============================== DEVICES ============================== -->
         <section>
             <section class="devices-sec1" id="settings1">
