Adding more videos

--- a/Videos/index.html
+++ b/Videos/index.html
@@ -203,19 +203,6 @@
             <section>
 
                 <div class="videos-grid" data-videos-container>
-
-                    <template data-videos-template>
-                    <div class="video">
-                        <a href="" data-video-link>
-                            <img class="video-thumbnail" loading="lazy" src="" alt="Thumbnail" data-video-image/>
-                        </a>
-                        <a href="" data-video-link>
-                            <h2 class="video-title" data-video-title></h2>
-                        </a>
-                    </div>
-                </template>
-
-
                     <div class="video">
                         <a href="https://VukeFN.github.io/Videos/Headshot_Only_Gamemode">
                             <img loading="lazy" src="/Thumbnails/Headshot Only Gamemode.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -227,7 +214,7 @@
 
                     <div class="video">
                         <a href="https://VukeFN.github.io/Videos/Clix_Team_Selector_Chapter_3">
-                            <img loading="lazy" src="../Thumbnails/Clix Team Selector 2.png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/Clix Team Selector 2.png" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="https://VukeFN.github.io/Videos/Clix_Team_Selector_Chapter_3">
                             <p class="video-title">How to Make Clix Team Selector</p>
@@ -236,7 +223,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/Clix Loadout Selector 2.png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/Clix Loadout Selector 2.png" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make Clix Loadout Selector</p>
@@ -245,7 +232,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make BHE Trolling Room (Part 3).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make BHE Trolling Room (Part 3).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE Trolling Room (Part 3)</p>
@@ -263,7 +250,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/Arena Scoreboard in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/Arena Scoreboard in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make a Working Arena Scoreboard</p>
@@ -272,7 +259,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/Build Reset Remote in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/Build Reset Remote in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make Build Reset Remote</p>
@@ -281,7 +268,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/Reboot Mechanic.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/Reboot Mechanic.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make Reboot Mechanic</p>
@@ -290,7 +277,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/1v1 Arena Scoring System in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/1v1 Arena Scoring System in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">1v1 Arena Scoring System (Old)</p>
@@ -308,7 +295,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/Team Selector Mechanic.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/Team Selector Mechanic.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">
@@ -319,7 +306,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make BHE Trolling Room (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make BHE Trolling Room (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE Trolling Room (Part 2)</p>
@@ -328,7 +315,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make BHE Trolling Room.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make BHE Trolling Room.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE Trolling Room (Part 1)</p>
@@ -337,7 +324,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make Clix Box Fights Map (FULL).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make Clix Box Fights Map (FULL).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make Clix Boxfights Map</p>
@@ -355,7 +342,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/BHE Start Island.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/BHE Start Island.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE Start Island</p>
@@ -364,7 +351,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/BHE Spawn Island (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/BHE Spawn Island (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE Spawn Island (Part 2)</p>
@@ -373,7 +360,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/BHE Spawn Island (Part 1).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/BHE Spawn Island (Part 1).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE Spawn Island (Part 1)</p>
@@ -382,7 +369,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 5).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make BHE Boxfights Map (Part 5).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE Boxfights Map (Part 5)</p>
@@ -400,7 +387,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 4).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make BHE Boxfights Map (Part 4).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE Boxfights Map (Part 4)</p>
@@ -409,7 +396,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make First Person Mechanic.png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make First Person Mechanic.png" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">
@@ -420,7 +407,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 3).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make BHE Boxfights Map (Part 3).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE Boxfights Map (Part 3)</p>
@@ -429,7 +416,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make BHE Boxfights Map (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE Boxfights Map (Part 2)</p>
@@ -447,7 +434,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make BHE Boxfights Map (Part 1).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make BHE Boxfights Map (Part 1).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE Boxfights Map (Part 1)</p>
@@ -456,7 +443,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/Emote to Change Loadout.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/Emote to Change Loadout.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make Emote to Change Loadout</p>
@@ -465,7 +452,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 7).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make BHE 1v1 Map (Part 7).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE 1v1 Map (Part 7)</p>
@@ -474,7 +461,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 6).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make BHE 1v1 Map (Part 6).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE 1v1 Map (Part 6)</p>
@@ -492,7 +479,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 5).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make BHE 1v1 Map (Part 5).png" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE 1v1 Map (Part 5)</p>
@@ -501,7 +488,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 4).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make BHE 1v1 Map (Part 4).png" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE 1v1 Map (Part 4)</p>
@@ -510,7 +497,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE 1v1 Map (Part 3)</p>
@@ -519,7 +506,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 2).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make BHE 1v1 Map (Part 2).png" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE 1v1 Map (Part 2)</p>
@@ -537,7 +524,7 @@
 
                     <div class="video">
                         <a href="#">
-                            <img loading="lazy" src="../Thumbnails/How to Make BHE 1v1 Map (Part 1).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                            <img loading="lazy" src="/Thumbnails/How to Make BHE 1v1 Map (Part 1).png" alt="Thumbnail" class="video-thumbnail" width="216" />
                         </a>
                         <a href="#">
                             <p class="video-title">How to Make BHE 1v1 Map (Part 1)</p>
