--- a/Videos/Clix_Loadout_Selector_Chapter_3/index.html
+++ b/Videos/Clix_Loadout_Selector_Chapter_3/index.html
@@ -155,35 +155,66 @@
 
         <!-- ============================== DEVICES ============================== -->
         <section>
+            <!-- ========== SETTINGS1 ========== -->
             <section class="devices-sec1" id="settings1">
                 <div class="scroll-left">
                     <ion-icon name="chevron-back-outline"></ion-icon>
                 </div>
+
                 <h2>Mechanic Devices</h2>
                 <div class="sec-devices">
                     <div id="" data-channel="1" class="CLASS-DESIGNER"></div>
                     <div id="" data-channel="2" class="CLASS-DESIGNER"></div>
                     <div id="" data-channel="3" class="CLASS-DESIGNER"></div>
+                    <div class="dividor"></div>
                     <div id="" data-channel="4" class="CLASS-SELECTOR"></div>
                     <div id="" data-channel="5" class="CLASS-SELECTOR"></div>
                     <div id="" data-channel="6" class="CLASS-SELECTOR"></div>
+                    <div class="dividor"></div>
                     <div id="" data-channel="7" class="TRIGGER">CH 05</div>
                     <div id="" data-channel="8" class="TRIGGER">CH 06</div>
                     <div id="" data-channel="9" class="TRIGGER">CH 04</div>
                     <div id="" data-channel="10" class="TRIGGER">CH 06</div>
                     <div id="" data-channel="11" class="TRIGGER">CH 04</div>
                     <div id="" data-channel="12" class="TRIGGER">CH 05</div>
+                    <div class="dividor"></div>
+                    <div id="" data-channel="13" class="TRIGGER">CH 11</div>
+                    <div id="" data-channel="14" class="TRIGGER">CH 11</div>
+                    <div class="dividor"></div>
+                    <div id="" data-channel="15" class="TIMER"></div>
+                    <div class="dividor"></div>
+                    <div id="" data-channel="16" class="TRIGGER">CH 15</div>
+                    <div id="" data-channel="17" class="TRIGGER">CH 17</div>
+                    <div class="dividor"></div>
+                    <div id="" data-channel="18" class="CLASS-DESIGNER"></div>
                 </div>
+
                 <div class="scroll-right">
                     <ion-icon name="chevron-forward-outline"></ion-icon>
                 </div>
             </section>
+
+            <!-- ========== SETTINGS2 ========== -->
             <section class="devices-sec2" id="settings2">
                 <div class="scroll-left">
                     <ion-icon name="chevron-back-outline"></ion-icon>
                 </div>
+
                 <h2>Loadout Selection Area</h2>
-                <div class="sec-devices"></div>
+                <div class="sec-devices">
+                    <div id="" data-channel="1" class="BARRIER"></div>
+                    <div class="dividor"></div>
+                    <div id="" data-channel="2" class="MATCHMAKING-PORTAL"></div>
+                    <div id="" data-channel="3" class="MATCHMAKING-PORTAL"></div>
+                    <div id="" data-channel="4" class="MATCHMAKING-PORTAL"></div>
+                    <div class="dividor"></div>
+                    <div id="" data-channel="5" class="SWITCH"></div>
+                    <div id="" data-channel="6" class="SWITCH"></div>
+                    <div id="" data-channel="7" class="SWITCH"></div>
+                    <div class="dividor"></div>
+                    <div id="" data-channel="8" class="MUTATOR-ZONE"></div>
+                </div>
+
                 <div class="scroll-right">
                     <ion-icon name="chevron-forward-outline"></ion-icon>
                 </div>
@@ -199,16 +230,6 @@
                     <span class="device-name">Trigger</span>
                 </li>
             </ul>
-
-            <!-- ========== AD ========== -->
-            <section>
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-                <!-- Video Horizontal Ad Unit -->
-                <ins class="adsbygoogle ad-slot3" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
-                <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
-            </section>
 
             <!-- ========== SETTINGS BUTTONS ========== -->
             <div class="settings-buttons">
@@ -247,14 +268,21 @@
         <section class="island-settings">
             <div class="tab">
                 <h2>Island Settings</h2>
-                <h3>Hey</h3>
+                <div>
+                    <h3>TOTAL ROUNDS</h3>
+                    <span>3</span>
+                </div>
             </div>
             <div class="tab">
                 <h2>Game Settings</h2>
-                <h3>Hey</h3>
-                <h3>Hey</h3>
-                <h3>Hey</h3>
-                <h3>Hey</h3>
+                <div>
+                    <h3>TIME LIMIT</h3>
+                    <span>10 MINUTES</span>
+                </div>
+                <div>
+                    <h3>ELIMINATIONS TO END</h3>
+                    <span>20</span>
+                </div>
             </div>
         </section>
     </main>
