--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <div id="lower-opacity" class="lower-opacity" onclick="closeSideBar()"></div>
     <header>
         <nav class="nav">
+            <div class="choose-theme">
+                <ion-icon name="close-outline"></ion-icon>
+                Don't like this theme?<br />Choose your prefered theme.
+            </div>
             <div class="nav-header">
                 <div class="logo-container">
                     <ion-icon name="menu-outline" class="sidebar-button" onclick="openSideBar()"></ion-icon>
@@ -113,15 +117,48 @@
                 <div class="sidebar-nav">
                     <ul class="sidebar-nav-list">
                         <li class="item">
-                            <img src="https://img.icons8.com/external-ios-line-2px-amoghdesign/24/FFFFFF/external-about-multimedia-line-30px-ios-line-2px-amoghdesign.png" />
+                            <ion-icon name="information-circle-outline"></ion-icon>
                             <a href="https://youtube.com/c/VukeFN/About">ABOUT</a>
                         </li>
                         <li class="item">
-                            <img src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/24/FFFFFF/external-video-camera-interface-kiranshastry-lineal-kiranshastry.png" />
+                            <ion-icon name="videocam-outline"></ion-icon>
                             <a href="https://vukefn.github.io/Videos/">VIDEOS</a>
                         </li>
                         <li class="item">
-                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                            <?xml version="1.0" ?><svg id="Layer_1" style="enable-background: new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <style type="text/css">
+                    .st0 {
+                      clip-path: url(#SVGID_2_);
+                    }
+                    .st1 {
+                      clip-path: url(#SVGID_4_);
+                    }
+                  </style>
+                  <g>
+                    <g>
+                      <g>
+                        <path
+                          d="M3,14c-0.1689453,0-0.3369141-0.0429688-0.4892578-0.1279297C2.1953125,13.6953125,2,13.3613281,2,13V5     c0-0.3613281,0.1953125-0.6953125,0.5107422-0.8720703C2.828125,3.9521484,3.2128906,3.9580078,3.5214844,4.1464844l6.5458984,4     C10.3642578,8.328125,10.5458984,8.6513672,10.5458984,9s-0.1816406,0.671875-0.4785156,0.8535156l-6.5458984,4     C3.3613281,13.9511719,3.1806641,14,3,14z M4,6.7832031v4.4335938L7.6279297,9L4,6.7832031z"
+                        />
+                      </g>
+                    </g>
+                    <g>
+                      <path
+                        d="M29,10H13c-0.5527344,0-1-0.4472656-1-1s0.4472656-1,1-1h16c0.5527344,0,1,0.4472656,1,1S29.5527344,10,29,10z"
+                      />
+                    </g>
+                    <g>
+                      <path
+                        d="M29,28H5c-0.5527344,0-1-0.4472656-1-1s0.4472656-1,1-1h24c0.5527344,0,1,0.4472656,1,1S29.5527344,28,29,28z"
+                      />
+                    </g>
+                    <g>
+                      <path
+                        d="M29,19H5c-0.5527344,0-1-0.4472656-1-1s0.4472656-1,1-1h24c0.5527344,0,1,0.4472656,1,1S29.5527344,19,29,19z"
+                      />
+                    </g>
+                  </g>
+                </svg>
                             <a href="https://VukeFN.github.io/Playlists/">PLAYLISTS</a>
                         </li>
                     </ul>
@@ -131,37 +168,37 @@
                     <h2>PLAYLISTS</h2>
                     <div>
                         <div class="sidebar-playlist">
-                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                            <ion-icon name="albums-outline"></ion-icon>
                             <a href="">
                                 <h3>BHE 1v1 MAP</h3>
                             </a>
                         </div>
                         <div class="sidebar-playlist">
-                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                            <ion-icon name="albums-outline"></ion-icon>
                             <a href="">
                                 <h3>CLIX BOXFIGHTS</h3>
                             </a>
                         </div>
                         <div class="sidebar-playlist">
-                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                            <ion-icon name="albums-outline"></ion-icon>
                             <a href="">
                                 <h3>FLEA</h3>
                             </a>
                         </div>
                         <div class="sidebar-playlist">
-                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                            <ion-icon name="albums-outline"></ion-icon>
                             <a href="">
                                 <h3>BHE BOXFIGHTS</h3>
                             </a>
                         </div>
                         <div class="sidebar-playlist">
-                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                            <ion-icon name="albums-outline"></ion-icon>
                             <a href="">
                                 <h3>BHE SPAWN ISLAND</h3>
                             </a>
                         </div>
                         <div class="sidebar-playlist">
-                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                            <ion-icon name="albums-outline"></ion-icon>
                             <a href="">
                                 <h3>BHE START ISLAND</h3>
                             </a>
@@ -260,7 +297,7 @@
                 </a>
             </div>
 
-            <div id="card2" class="card" data-aos="fade-up" data-aos-offset="400">
+            <div id="card2" class="card" data-aos="fade-up" data-aos-offset="300">
                 <section class="card-video">
                     <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" autoplay loop muted />
                 </section>
