--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@
                     </ul>
                 </div>
 
-                <div>
-                    <a href="/Videos" class="get-started">GET STARTED
-              <ion-icon name="chevron-forward-outline"></ion-icon>
-            </a>
-                </div>
+                <a href="/Videos" class="get-started">GET STARTED
+            <ion-icon name="chevron-forward-outline"></ion-icon>
+          </a>
             </div>
 
             <div class="content">
@@ -279,11 +277,8 @@
 
     <main id="main">
         <div class="container" data-aos="fade-in">
-            <div id="card1" class="card" data-aos="fade-up" data-aos-offset="500">
-                <section class="card-text-desktop">
-                    <h1>GETTING STARTED!</h1>
-                    <a href="/Videos">VIDEOS</a>
-                </section>
+            <div id="card1" class="card" data-aos="fade-up" data-aos-offset="280">
+                <section class="card-text-desktop"></section>
                 <section class="card-video">
                     <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" autoplay loop muted />
                 </section>
@@ -291,42 +286,26 @@
                     <h1>GETTING STARTED!</h1>
                     <a href="/Videos">VIDEOS</a>
                 </section>
-
-                <img src="/Devices/mutator.png" alt="" class="extra-image1" />
-                <img src="/Devices/player_spawn_pad.png" alt="" class="extra-image2" />
-                <img src="/Devices/switch.png" alt="" class="extra-image3" />
             </div>
 
-            <div id="card2" class="card" data-aos="fade-up" data-aos-offset="400">
+            <div id="card2" class="card" data-aos="fade-up" data-aos-offset="230">
                 <section class="card-video">
                     <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" autoplay loop muted />
                 </section>
-                <section class="card-text-desktop">
-                    <h1>JUST ONE CLICK!</h1>
-                </section>
+                <section class="card-text-desktop"></section>
                 <section class="card-text-mobile">
                     <h1>JUST ONE CLICK!</h1>
                 </section>
-
-                <img src="/Devices/health_powerup.png" alt="" class="extra-image1" />
-                <img src="/Devices/class_selector.png" alt="" class="extra-image2" />
-                <img src="/Devices/sequencer.png" alt="" class="extra-image3" />
             </div>
 
-            <div id="card3" class="card" data-aos="fade-up" data-aos-offset="400">
-                <section class="card-text-desktop">
-                    <h1>NO MORE PROBLEMS!</h1>
-                </section>
+            <div id="card3" class="card" data-aos="fade-up" data-aos-offset="180">
+                <section class="card-text-desktop"></section>
                 <section class="card-video">
                     <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" autoplay loop muted />
                 </section>
                 <section class="card-text-mobile">
                     <h1>NO MORE PROBLEMS!</h1>
                 </section>
-
-                <img src="/Devices/timer.png" alt="" class="extra-image1" />
-                <img src="/Devices/class_designer.png" alt="" class="extra-image2" />
-                <img src="/Devices/score.png" alt="" class="extra-image3" />
             </div>
         </div>
     </main>
