Loading is faster now

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-    <script src="./js/main.js"></script>
+
     <title>VukeFN | Home</title>
 </head>
 
@@ -63,9 +63,10 @@
                     <p>
                         "Creativity doesn’t wait for that perfect moment. It fashions its own perfect moments out of ordinary ones."
                     </p>
-                    <a href="#main" class="continue">CONTINUE
-              <ion-icon name="chevron-forward-outline"></ion-icon>
-            </a>
+                    <a href="#main" class="continue">
+                        <h1>CONTINUE</h1>
+                        <ion-icon name="chevron-forward-outline"></ion-icon>
+                    </a>
                 </div>
                 <div class="content-img">
                     <video src="/Images/idk2.mp4" alt="" autoplay loop muted></video>
@@ -284,7 +285,6 @@
                 </section>
                 <section class="card-text-mobile">
                     <h1>GETTING STARTED!</h1>
-                    <a href="/Videos">VIDEOS</a>
                 </section>
             </div>
 
@@ -316,6 +316,7 @@
     <script>
         AOS.init();
     </script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
